added strings to wordcount and concordance

--- a/WordCounter/app/src/main/res/values/strings.xml
+++ b/WordCounter/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="count_words_text">Count the words</string>
     <string name="about_page">About</string>
     <string name="settings_page">Settings</string>
+    <string name="wordcount" />
+    <string name="concordance" />
 </resources>
